Support publish async and replace LINQ to reduce overhead

--- a/Runtime/AYip.Events.asmdef
+++ b/Runtime/AYip.Events.asmdef
@@ -2,7 +2,8 @@
     "name": "AYip.Events",
     "rootNamespace": "",
     "references": [
-        "AYip.Foundation"
+        "AYip.Foundation",
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
